Allow passing block to configure safelist. Upgrade to JDK 21